--- a/Python-IIIT/12-sept-2019.ipynb
+++ b/Python-IIIT/12-sept-2019.ipynb
@@ -716,10 +716,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000  333.3333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "result=sum(d1.values())\n",
+    "print(result,'',result/key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10: 100, 20: 200, 30: 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[10,20,30]\n",
+    "list2=[100,200,300]\n",
+    "# {10:100,20:200,30:300}\n",
+    "dict1={}\n",
+    "for i in range(0,len(list1)):\n",
+    "    dict1[list1[i]]=list2[i]\n",
+    "            \n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "contact added\n",
+      "contact added\n",
+      "contact added\n",
+      "contact added\n",
+      "{'divya': 9989079328, 'vijju': 8125904432, 'van': 4353453453, 'teja': 9963828980, 'mom': 7780500824, 'dad': 738213425}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# update contact list\n",
+    "contacts={}\n",
+    "def addcontacts(name,phone):\n",
+    "    if name not  in contacts:\n",
+    "        contacts[name]=phone\n",
+    "        contacts.update({'vijju':8125904432})\n",
+    "        contacts.update({'van':4353453453})\n",
+    "        print('contact added')\n",
+    "    else:\n",
+    "        print('contact is existed')\n",
+    "    return\n",
+    "addcontacts('divya',9989079328)\n",
+    "addcontacts('teja',9963828980)\n",
+    "addcontacts('mom',7780500824)\n",
+    "addcontacts('dad',738213425)\n",
+    "print(contacts)"
+   ]
   },
   {
    "cell_type": "code",
